--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <small class="fa fa-map-marker-alt text-success me-2"></small>
-                    <small>123 Street, New York, USA</small>
+                    <small class="fa-solid fa-pencil text-success"></small>
+                    <small>Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a></small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center py-3">
                     <small class="far fa-clock text-success me-2"></small>
