--- a/index.html
+++ b/index.html
@@ -49,16 +49,8 @@
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <small class="fa-solid fa-pencil text-success"></small>
+                    <small class="fa-solid fa-pencil"></small>
                     <small>Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a></small>
-                </div>
-                <div class="h-100 d-inline-flex align-items-center py-3">
-                    <small class="far fa-clock text-success me-2"></small>
-                    <small>Mon - Fri : 09.00 AM - 09.00 PM</small>
-                </div>
-                <div class="h-100 d-inline-flex align-items-center py-3">
-                    <small class="far fa-clock text-success me-2"></small>
-                    <small>距離2024年2月10日<class="timer">還有<span id="day"></span>天<span id="hour"></span>小時<span id="min"></span>分<span id="sec"></span>秒</small>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
