--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             </div>
             <div class="col-lg-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <small class="fa fa-phone-alt text-success me-2"></small>
-                    <small>+012 345 6789</small>
+                    <small class="fa-solid fa-pencil"></small>
+                    <small>Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a></small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                         <a href="https://pakkiyick.tumblr.com/" data-toggle="tooltip" data-placement="right" title="English Online Diary ">
