--- a/index.html
+++ b/index.html
@@ -48,15 +48,12 @@
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <small><i class="fa-solid fa-file-pen"></i></small>
+                    <small class="fa-solid fa-file-pen"></small>
+                    <small class="far fa-clock text-primary me-2"></small>
                     <small>Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a></small>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
-                <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <small class="fa-solid fa-file-pen"></small>
-                    <small>Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a></small>
-                </div>
                 <div class="h-100 d-inline-flex align-items-center">
                         <a href="https://pakkiyick.tumblr.com/" data-toggle="tooltip" data-placement="right" title="English Online Diary ">
                           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 48 48">
@@ -546,7 +543,6 @@
                                 <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
                                 </svg>
                             </a> 
-                            Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
                         </div>
                     </div>
     <!-- Social Media End-->
