--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
                     <small class="fa-solid fa-file-pen"></small>
                     <small class="far fa-clock text-primary me-2"></small>
+                    <i class="fa-solid fa-file-pen"></i>
                     <small>Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a></small>
                 </div>
             </div>
