--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <i class="fa fa-phone-alt text-primary me-2"></i>
                     <small class="fa-regular fa-pen-to-square me-2"></small>
                     <i class="fa-regular fa-pen-to-square"></i>
+                    <ion-icon name="code-slash-outline"></ion-icon>
                     <small>Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a></small>
                 </div>
             </div>
