--- a/index.html
+++ b/index.html
@@ -48,11 +48,9 @@
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <small class="far fa-clock text-primary me-2"></small>
-                    <i class="fa fa-phone-alt text-primary me-2"></i>
-                    <small class="fa-regular fa-pen-to-square me-2"></small>
-                    <i class="fa-regular fa-pen-to-square"></i>
-                    <ion-icon name="code-slash-outline"></ion-icon>
+                    <small class="code-slash-outline me-2"></small>
+                    <i class="code-slash-outline"></i>
+                    <small><ion-icon name="code-slash-outline"></ion-icon></small>
                     <small>Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a></small>
                 </div>
             </div>
