--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
 </head>
 
 <body>
@@ -51,6 +55,8 @@
                     <small class="code-slash-outline me-2"></small>
                     <i class="code-slash-outline"></i>
                     <small><ion-icon name="code-slash-outline"></ion-icon></small>
+                    <i class="fa-solid fa-code"></i>
+                    <i class="fa fa-car"></i>
                     <small>Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a></small>
                 </div>
             </div>
