--- a/index.html
+++ b/index.html
@@ -52,12 +52,8 @@
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <small class="code-slash-outline me-2"></small>
-                    <i class="code-slash-outline"></i>
-                    <small><ion-icon name="code-slash-outline"></ion-icon></small>
-                    <i class="fa-solid fa-code"></i>
-                    <i class="fa fa-car"></i>
-                    <small>Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a></small>
+                    <i class="fa fa-file-code-o" style="font-size:24px"></i>
+                    <small> Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a></small>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
