--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
                     <i class="fa fa-file-code-o" style="font-size:24px"></i>
-                    <small> Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a></small>
+                    <small> &nbsp; Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a></small>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
