--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <i class="fa fa-file-code-o" style="font-size:24px"></i>
+                    <a class="fa fa-file-code-o" href="https://htmlcodex.com" style="font-size:24px"></a>
                     <small> &nbsp; Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a></small>
                 </div>
             </div>
@@ -131,7 +131,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">Mesozoic</a>
+                <a class="page-scroll nav-item nav-link" href="#Mesozoic">Mesozoic</a>
                 <a href="service.html" class="nav-item nav-link">Dinosaurs</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -205,6 +205,7 @@
 
 
     <!-- About Start -->
+    <section id="Mesozoic"></section>
     <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-5">
