--- a/index.html
+++ b/index.html
@@ -132,8 +132,11 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a class="page-scroll nav-item nav-link" href="#Mesozoic">Mesozoic</a>
-                <a href="service.html" class="nav-item nav-link">Dinosaurs</a>
-                <div class="nav-item dropdown">
+                <a class="page-scroll nav-item nav-link" href="#Dinosaurs">Dinosaurs</a>
+                <a class="page-scroll nav-item nav-link" href="#Fossils">Fossils</a>
+                <a class="page-scroll nav-item nav-link" href="#Dinosaur">Dinosaurs</a>
+                <a class="page-scroll nav-item nav-link" href="#Dinosaur">Dinosaurs</a>
+                <!--<div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
                         <a href="feature.html" class="dropdown-item">Fossils</a>
@@ -142,8 +145,7 @@
                         <a href="testimonial.html" class="dropdown-item">Museums</a>
                         <a href="404.html" class="dropdown-item">Notices</a>
                     </div>
-                </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                </div>-->
             </div>
             <a href="" class="btn btn-success rounded-0 py-4 px-lg-5 d-none d-lg-block">Chinese Dragons<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
@@ -204,7 +206,7 @@
     <!-- Header End -->
 
 
-    <!-- About Start -->
+    <!-- Mesozoic Start -->
     <section id="Mesozoic"></section>
     <div class="container-xxl py-5">
         <div class="container">
@@ -228,10 +230,11 @@
             </div>
         </div>
     </div>
-    <!-- About End -->
+    <!-- Mesozoic End -->
 
 
-    <!-- Service Start -->
+    <!-- Dinosaurs Start -->
+    <section id="Dinosaurs"></section>
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
@@ -302,10 +305,11 @@
             </div>
         </div>
     </div>
-    <!-- Service End -->
+    <!-- Dinosaurs End -->
 
 
-    <!-- Feature Start -->
+    <!-- Fossils Start -->
+    <section id="Fossils"></section>
     <div class="container-fluid bg-success overflow-hidden my-5 px-lg-0">
         <div class="container feature px-lg-0">
             <div class="row g-0 mx-lg-0">
@@ -370,7 +374,7 @@
             </div>
         </div>
     </div>
-    <!-- Feature End -->
+    <!-- Fossils End -->
 
 
     <!-- Team Start -->
