--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                 <a class="page-scroll nav-item nav-link" href="#Mesozoic">Mesozoic</a>
                 <a class="page-scroll nav-item nav-link" href="#Dinosaurs">Dinosaurs</a>
                 <a class="page-scroll nav-item nav-link" href="#Fossils">Fossils</a>
-                <a class="page-scroll nav-item nav-link" href="#Dinosaur">Dinosaurs</a>
-                <a class="page-scroll nav-item nav-link" href="#Dinosaur">Dinosaurs</a>
+                <a class="page-scroll nav-item nav-link" href="#Paleozoic">Paleozoic</a>
+                <a class="page-scroll nav-item nav-link" href="#Museums">Museums</a>
                 <!--<div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
@@ -377,7 +377,8 @@
     <!-- Fossils End -->
 
 
-    <!-- Team Start -->
+    <!-- Paleozoic Start -->
+    <section id="Paleozoic"></section>
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
@@ -452,9 +453,10 @@
             </div>
         </div>
     </div>
-    <!-- Team End -->
+    <!-- Paleozoic End -->
 
-    <!-- Testimonial Start -->
+    <!-- Museums Start -->
+    <section id="#Museums"></section>
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
@@ -489,7 +491,7 @@
             </div>
         </div>
     </div>
-    <!-- Testimonial End -->
+    <!-- Museums End -->
 
 
     <!-- Footer Start -->
