--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
     <!-- Paleozoic End -->
 
     <!-- Museums Start -->
-    <section id="#Museums"></section>
+    <section id="Museums"></section>
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
