--- a/index.html
+++ b/index.html
@@ -556,6 +556,41 @@
                         </div>
                     </div>
     <!-- Social Media End-->
+
+    <!-- Video Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row g-5">
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="w3-card w3-margin w3-margin-top">
+                        <iframe width="430" height="242" class="corner" src="https://www.youtube.com/embed/haEwIl9QJmI?si=K6P5iqFExQ9ba0WN" title="YouTube video player" frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <div class="w3-container w3-white">
+                          <h4><b>About Alientopia</b></h4>
+                          <p>Alientopia is a website where you can find everything related to travel, animals and novels. Every now and then, 
+                            some critical comments on social issues and current movies would also be released. It is believed that anyone with logical thinking will enjoy surfing here. </p>
+                        </div>
+                    </div><hr>
+                </div>
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="bg-light rounded h-100 d-flex align-items-center p-5">
+                        <div class="w3-card w3-margin w3-margin-top">
+                            <iframe width="430" height="242" class="corner" src="https://www.youtube.com/embed/haEwIl9QJmI?si=K6P5iqFExQ9ba0WN" title="YouTube video player" frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <div class="w3-container w3-white">
+                              <h4><b>About Alientopia</b></h4>
+                              <p>Alientopia is a website where you can find everything related to travel, animals and novels. Every now and then, 
+                                some critical comments on social issues and current movies would also be released. It is believed that anyone with logical thinking will enjoy surfing here. </p>
+                            </div>
+                        </div><hr>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Video End -->
+
+
     <!-- Footer End -->
 
 
