--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" data-ride="carousel" data-interval=3000>
+            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" data-ride="carousel">
                 <!--<div id="myCarousel" class="carousel slide"  data-ride="carousel" data-interval=3000></div>-->
                 <div class="owl-carousel header-carousel">
                     <div class="owl-carousel-item position-relative">
