--- a/index.html
+++ b/index.html
@@ -186,6 +186,12 @@
                 </div>
             </div>
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" data-ride="carousel">
+                    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
                 <!--<div id="myCarousel" class="carousel slide"  data-ride="carousel" data-interval=3000></div>-->
                 <div class="owl-carousel header-carousel">
                     <div class="owl-carousel-item position-relative">
