--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
+
 </head>
 
 <body>
@@ -132,6 +133,7 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a class="page-scroll nav-item nav-link" href="#Mesozoic">Mesozoic</a>
+                <a class="page-scroll nav-item nav-link" href="#Cartoon">Cartoon</a>
                 <a class="page-scroll nav-item nav-link" href="#Dinosaurs">Dinosaurs</a>
                 <a class="page-scroll nav-item nav-link" href="#Fossils">Fossils</a>
                 <a class="page-scroll nav-item nav-link" href="#Paleozoic">Paleozoic</a>
@@ -232,6 +234,25 @@
     </div>
     <!-- Mesozoic End -->
 
+        <!-- Cartoon Start -->
+        <section id="Cartoon"></section>
+        <div class="container-xxl py-5">
+            <div class="container">
+                <div class="row g-5">
+                    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+                        <div class="d-flex flex-column">
+                            <p>Alientopia is a website where you can find everything related to travel, animals and novels. Every now and then, 
+                                some critical comments on social issues and current movies would also be released. It is believed that anyone with logical thinking will enjoy surfing here. </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                        <iframe width="430" height="242" class="corner" src="https://www.youtube.com/embed/haEwIl9QJmI?si=K6P5iqFExQ9ba0WN" title="YouTube video player" frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Cartoon End -->
 
     <!-- Dinosaurs Start -->
     <section id="Dinosaurs"></section>
