--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
 
+    <style>
+    /*Photo Corner*/
+        .corner {
+    border-radius: 20px 20px;
+    }
+
+    </style>
 </head>
 
 <body>
@@ -241,12 +248,13 @@
                 <div class="row g-5">
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                         <div class="d-flex flex-column">
+                            <h1 class="mb-4" style="color: #077c0d">Animal Crossing: Dino Museum</h1>
                             <p>Alientopia is a website where you can find everything related to travel, animals and novels. Every now and then, 
                                 some critical comments on social issues and current movies would also be released. It is believed that anyone with logical thinking will enjoy surfing here. </p>
                         </div>
                     </div>
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                        <iframe width="430" height="242" class="corner" src="https://www.youtube.com/embed/haEwIl9QJmI?si=K6P5iqFExQ9ba0WN" title="YouTube video player" frameborder="0" 
+                        <iframe width="530" height="298" class="corner" src="https://www.youtube.com/embed/haEwIl9QJmI?si=K6P5iqFExQ9ba0WN" title="YouTube video player" frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
@@ -265,9 +273,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item bg-light rounded h-100 p-5">
-                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;">
-                            <i class="fa fa-heartbeat text-success fs-4"></i>
-                        </div>
+                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;"></div>
                         <h4 class="mb-3" style="color:green;">Tyrannosaurus Rex</h4>
                         <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Tyrannosaurus.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
@@ -275,9 +281,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item bg-light rounded h-100 p-5">
-                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;">
-                            <i class="fa fa-x-ray text-success fs-4"></i>
-                        </div>
+                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;"> </div>
                         <h4 class="mb-3" style="color:green;">Stegosaurus</h4>
                         <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Stegosaurus.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
@@ -285,9 +289,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item bg-light rounded h-100 p-5">
-                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;">
-                            <i class="fa fa-brain text-success fs-4"></i>
-                        </div>
+                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;"></div>
                         <h4 class="mb-3" style="color:green;">Spinosaurus</h4>
                         <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Spinosaurus.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
@@ -295,9 +297,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item bg-light rounded h-100 p-5">
-                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;">
-                            <i class="fa fa-wheelchair text-success fs-4"></i>
-                        </div>
+                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;"></div>
                         <h4 class="mb-3" style="color:green;">Triceratops</h4>
                         <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Triceratops.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
@@ -315,9 +315,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item bg-light rounded h-100 p-5">
-                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;">
-                            <i class="fa fa-vials text-success fs-4"></i>
-                        </div>
+                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;"></div>
                         <h4 class="mb-3" style="color:green;">Velociraptor</h4>
                         <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Velociraptor.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
