--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     </div>
     <!-- Mesozoic End -->
 
-        <!-- Cartoon Start -->
+    <!-- Cartoon Start -->
         <section id="Cartoon"></section>
         <div class="container-xxl py-5">
             <div class="container">
@@ -260,7 +260,7 @@
                 </div>
             </div>
         </div>
-        <!-- Cartoon End -->
+    <!-- Cartoon End -->
 
     <!-- Dinosaurs Start -->
     <section id="Dinosaurs"></section>
@@ -305,9 +305,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item bg-light rounded h-100 p-5">
-                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;">
-                            <i class="fa fa-tooth text-success fs-4"></i>
-                        </div>
+                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;"></div>
                         <h4 class="mb-3" style="color:green;">Therizinosaurus</h4>
                         <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Therizinosaurus.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
@@ -575,40 +573,6 @@
                         </div>
                     </div>
     <!-- Social Media End-->
-
-    <!-- Video Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="w3-card w3-margin w3-margin-top">
-                        <iframe width="430" height="242" class="corner" src="https://www.youtube.com/embed/haEwIl9QJmI?si=K6P5iqFExQ9ba0WN" title="YouTube video player" frameborder="0" 
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                        <div class="w3-container w3-white">
-                          <h4><b>About Alientopia</b></h4>
-                          <p>Alientopia is a website where you can find everything related to travel, animals and novels. Every now and then, 
-                            some critical comments on social issues and current movies would also be released. It is believed that anyone with logical thinking will enjoy surfing here. </p>
-                        </div>
-                    </div><hr>
-                </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="bg-light rounded h-100 d-flex align-items-center p-5">
-                        <div class="w3-card w3-margin w3-margin-top">
-                            <iframe width="430" height="242" class="corner" src="https://www.youtube.com/embed/haEwIl9QJmI?si=K6P5iqFExQ9ba0WN" title="YouTube video player" frameborder="0" 
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                            <div class="w3-container w3-white">
-                              <h4><b>About Alientopia</b></h4>
-                              <p>Alientopia is a website where you can find everything related to travel, animals and novels. Every now and then, 
-                                some critical comments on social issues and current movies would also be released. It is believed that anyone with logical thinking will enjoy surfing here. </p>
-                            </div>
-                        </div><hr>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Video End -->
-
 
     <!-- Footer End -->
 
