--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- Hover -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css">
-    
+
     <style>
     /*Photo Corner*/
         .corner {
@@ -64,7 +64,7 @@
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <a class="fa fa-file-code-o" href="https://htmlcodex.com" style="font-size:24px"></a>
+                    <a class="fa fa-file-code-o" href="https://htmlcodex.com" style="font-size:24px; color:Blue;"></a>
                     <small> &nbsp; Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a></small>
                 </div>
             </div>
