--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <a class="fa fa-file-code-o" href="https://htmlcodex.com" style="font-size:24px;"></a>
-                    <small> &nbsp; <a class="border-bottom" href="https://htmlcodex.com">Designed By HTML Codex</a></small>
+                    <a class="fa fa-file-code-o" href="https://htmlcodex.com" style="font-size:24px; color:yellow"></a>
+                    <small> &nbsp; <a class="border-bottom" style="color:yellow;" href="https://htmlcodex.com">Designed By HTML Codex</a></small>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
@@ -418,7 +418,7 @@
                         </div>
                         <ul class="icon">
                             <li><a href="#"><i class="fa fa-link"></i></a></li>
-                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo</p>
+                            <p  style="color:yellow;">Erat ipsum justo amet duo et elitr dolor, est duo duo</p>
                         </ul>
                     </div>
                 </div>
@@ -429,7 +429,7 @@
                         </div>
                         <ul class="icon">
                             <li><a href="#"><i class="fa fa-link"></i></a></li>
-                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo</p>
+                            <p  style="color:yellow;">Erat ipsum justo amet duo et elitr dolor, est duo duo</p>
                         </ul>
                     </div>
                 </div>
@@ -440,7 +440,7 @@
                         </div>
                         <ul class="icon">
                             <li><a href="#"><i class="fa fa-link"></i></a></li>
-                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo</p>
+                            <p  style="color:yellow;">Erat ipsum justo amet duo et elitr dolor, est duo duo</p>
                         </ul>
                     </div>
                 </div>
@@ -451,7 +451,7 @@
                         </div>
                         <ul class="icon">
                             <li><a href="#"><i class="fa fa-link"></i></a></li>
-                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo</p>
+                            <p  style="color:yellow;">Erat ipsum justo amet duo et elitr dolor, est duo duo</p>
                         </ul>
                     </div>
                 </div>
@@ -462,7 +462,7 @@
                         </div>
                         <ul class="icon">
                             <li><a href="#"><i class="fa fa-link"></i></a></li>
-                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo</p>
+                            <p  style="color:yellow;">Erat ipsum justo amet duo et elitr dolor, est duo duo</p>
                         </ul>
                     </div>
                 </div>
@@ -473,7 +473,7 @@
                         </div>
                         <ul class="icon">
                             <li><a href="#"><i class="fa fa-link"></i></a></li>
-                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo</p>
+                            <p  style="color:yellow;">Erat ipsum justo amet duo et elitr dolor, est duo duo</p>
                         </ul>
                     </div>
                 </div>
