--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             <div class="container">
                 <div class="row g-5">
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                        <p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Mesozoic</p>
+                        <p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Cartoon</p>
                         <div class="d-flex flex-column">
                             <h1 class="mb-4" style="color: #077c0d">Animal Crossing: Dino Museum</h1>
                             <p>Alientopia is a website where you can find everything related to travel, animals and novels. Every now and then, 
