--- a/index.html
+++ b/index.html
@@ -284,6 +284,11 @@
                 <a class="page-scroll nav-item nav-link" href="#Fossils">Fossils</a>
                 <a class="page-scroll nav-item nav-link" href="#Paleozoic">Paleozoic</a>
                 <a class="page-scroll nav-item nav-link" href="#Museums">Museums</a>
+
+                <audio controls autoplay>
+                    <source src="dinoAudio/angryDino.mp3" type="audio/mp3">
+                </audio>
+                  
                 <!--<div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
