--- a/index.html
+++ b/index.html
@@ -285,9 +285,15 @@
                 <a class="page-scroll nav-item nav-link" href="#Paleozoic">Paleozoic</a>
                 <a class="page-scroll nav-item nav-link" href="#Museums">Museums</a>
 
+                <div class="audioembed">
+                    <audio controls="true" autoplay="true" src="dinoAudio/angryDino.mp3"  onloadeddata="setLowVolume()" id="audio1"></audio>
+                      <audio src="dinoAudio/angryDino.mp3" autoplay controls></audio>
+                </div>
+                <!--
                 <audio controls autoplay>
                     <source src="dinoAudio/angryDino.mp3" type="audio/mp3">
                 </audio>
+                -->
                   
                 <!--<div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
