--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css">-->
 
     <style>
-    /*Full Screen Start*/
+    /*Full Screen Start
         .bg {
             position: fixed;
             top: 0;
@@ -55,7 +55,20 @@
             height: 100%;
             width: 100%;
         }
-    /*Full Screen End*/
+    Full Screen End*/
+
+    /* Background Pattern Start*/
+        .container {
+        width: 100%;
+        height: 100%;
+        /* Add your background pattern here */
+        background-color: #ffffff;
+        background-image: radial-gradient(rgba(12, 12, 12, 0.171) 2px, transparent 0);
+        background-size: 30px 30px;
+        background-position: -5px -5px;
+        }
+    /* Background Pattern End*/
+
 
     /*Photo Corner Start*/
         .corner {
@@ -201,9 +214,9 @@
 </head>
 
 <body>
-    <div class="bg">
+    <!--<div class="bg">
         <img src="img/whiteBg.jpg">
-    </div>
+    </div>-->
     
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
@@ -672,7 +685,7 @@
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-2.jpg" style="width: 100px; height: 100px;">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-1.jpg" style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
                         <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
                         <h5 class="mb-1">Patient Name</h5>
@@ -680,7 +693,7 @@
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-3.jpg" style="width: 100px; height: 100px;">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-1.jpg" style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
                         <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
                         <h5 class="mb-1">Patient Name</h5>
