--- a/index.html
+++ b/index.html
@@ -527,9 +527,9 @@
             <div class="row g-0 mx-lg-0">
                 <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="p-lg-5 ps-lg-0">
-                        <p class="d-inline-block border rounded-pill text-light py-1 px-4">Amber</p>
-                        <h1 class="text-white mb-4">The Most Beautiful Fossil</h1>
-                        <p class="text-white mb-4 pb-2">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
+                        <p class="d-inline-block border rounded-pill text-dark py-1 px-4">Amber</p>
+                        <h1 class="text-success mb-4">The Most Beautiful Fossil</h1>
+                        <p class="text-warning mb-4 pb-2">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
                         <div class="row g-4">
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
@@ -537,8 +537,8 @@
                                         <i class="fa fa-user-md text-success"></i>
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white mb-2">Experience</p>
-                                        <h5 class="text-white mb-0">Doctors</h5>
+                                        <p class="text-danger mb-2">Experience</p>
+                                        <h5 class="text-danger mb-0">Doctors</h5>
                                     </div>
                                 </div>
                             </div>
@@ -548,8 +548,8 @@
                                         <i class="fa fa-check text-success"></i>
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white mb-2">Quality</p>
-                                        <h5 class="text-white mb-0">Services</h5>
+                                        <p class="text-secondary mb-2">Quality</p>
+                                        <h5 class="text-secondary mb-0">Services</h5>
                                     </div>
                                 </div>
                             </div>
@@ -559,8 +559,8 @@
                                         <i class="fa fa-comment-medical text-success"></i>
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white mb-2">Positive</p>
-                                        <h5 class="text-white mb-0">Consultation</h5>
+                                        <p class="text-primary mb-2">Positive</p>
+                                        <h5 class="text-primary mb-0">Consultation</h5>
                                     </div>
                                 </div>
                             </div>
@@ -570,8 +570,8 @@
                                         <i class="fa fa-headphones text-success"></i>
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white mb-2">24 Hours</p>
-                                        <h5 class="text-white mb-0">Support</h5>
+                                        <p class="text-info mb-2">24 Hours</p>
+                                        <h5 class="text-info mb-0">Support</h5>
                                     </div>
                                 </div>
                             </div>
