--- a/index.html
+++ b/index.html
@@ -351,20 +351,23 @@
                 <div class="row g-4">
                     <div class="col-sm-4">
                         <div class="border-start border-light ps-4">
-                            <h2 class="text-white mb-1" data-toggle="counter-up">123</h2>
-                            <p class="text-light mb-0">Expert Doctors</p>
+                            <h1 class="text-danger mb-0">Triassic</h1>
+                            <h2 class="text-white mb-1" data-toggle="counter-up">250</h2>
+                            <p class="text-light mb-0">million years ago</p>
                         </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="border-start border-light ps-4">
-                            <h2 class="text-white mb-1" data-toggle="counter-up">1234</h2>
-                            <p class="text-light mb-0">Medical Stuff</p>
+                            <h1 class="text-info mb-0">Jurassic</h1>
+                            <h2 class="text-white mb-1" data-toggle="counter-up">200</h2>
+                            <p class="text-light mb-0">million years ago</p>
                         </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="border-start border-light ps-4">
-                            <h2 class="text-white mb-1" data-toggle="counter-up">12345</h2>
-                            <p class="text-light mb-0">Total Patients</p>
+                            <h1 class="text-warning mb-0">Cretaceous</h1>
+                            <h2 class="text-white mb-1" data-toggle="counter-up">145</h2>
+                            <p class="text-light mb-0">million years ago</p>
                         </div>
                     </div>
                 </div>
@@ -408,14 +411,14 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Mesozoic</p>
+                    <a href="https://en.wikipedia.org/wiki/Mesozoic"><p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Mesozoic</p></a>
                     <h1 class="mb-4" style="color: #077c0d">The Mysterious Mesozoic: The Age of Reptiles!</h1>
-                    <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                    <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos.</p>
-                    <p><i class="far fa-check-circle text-success me-3"></i>Quality health care</p>
-                    <p><i class="far fa-check-circle text-success me-3"></i>Only Qualified Doctors</p>
-                    <p><i class="far fa-check-circle text-success me-3"></i>Medical Research Professionals</p>
-                    <a class="btn btn-success rounded-pill py-3 px-5 mt-3" href="">Read More</a>
+                    <p id="textBackground" style="color:rgb(63, 48, 6);">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet
+                    Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos.</p>
+                    <p class="text-danger mb-0"><i class="fa fa-paw text-success" aria-hidden="true"></i> &nbsp; <b>Triassic (251.902 to 201.4 million years ago)</b></p>
+                    <p class="text-info mb-0"><i class="fa fa-paw text-success" aria-hidden="true"></i> &nbsp; <b>Jurassic (201.4 to 145 million years ago)</b></p>
+                    <p class="text-warning mb-0"><i class="fa fa-paw text-success" aria-hidden="true"></i> &nbsp;<b>Cretaceous (145 to 66 million years ago)</b></p>
+                    <a class="btn btn-success rounded-pill py-3 px-5 mt-3" href="https://www.britannica.com/science/Mesozoic-Era">Read More</a>
                 </div>
             </div>
         </div>
