--- a/index.html
+++ b/index.html
@@ -413,8 +413,9 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <a href="https://en.wikipedia.org/wiki/Mesozoic"><p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Mesozoic</p></a>
                     <h1 class="mb-4" style="color: #077c0d">The Mysterious Mesozoic: The Age of Reptiles!</h1>
-                    <p id="textBackground" style="color:rgb(63, 48, 6);">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet
-                    Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos.</p>
+                    <p id="textBackground" style="color:rgb(63, 48, 6);">Deriving from the Greek words " meso" and "zoon", the term "Mesozoic" refers to a geological era that roughly extended from about
+                         252 million years ago to around 66 million years ago. This time span is divided into three major dinosaur periods, the Triassic, Jurassic and Cretaceous ages. 
+                         Since this epoch was the peak of the reptile-like animals, it was known as the “Age of Reptiles”. </p>
                     <p class="text-danger mb-0"><i class="fa fa-paw text-success" aria-hidden="true"></i> &nbsp; <b>Triassic (252 to 201 million years ago)</b></p>
                     <p class="text-info mb-0"><i class="fa fa-paw text-success" aria-hidden="true"></i> &nbsp; <b>Jurassic (201 to 145 million years ago)</b></p>
                     <p class="text-warning mb-0"><i class="fa fa-paw text-success" aria-hidden="true"></i> &nbsp;<b>Cretaceous (145 to 66 million years ago)</b></p>
