--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                     <h1 class="mb-4" style="color: #077c0d">The Mysterious Mesozoic: The Age of Reptiles!</h1>
                     <p id="textBackground" style="color:rgb(63, 48, 6);">Deriving from the Greek words " meso" and "zoon", the term "Mesozoic" refers to a geological era that roughly extended from about
                          252 million years ago to around 66 million years ago. This time span is divided into three major dinosaur periods, the Triassic, Jurassic and Cretaceous ages. 
-                         Since this epoch was the peak of the reptile-like animals, it was known as the “Age of Reptiles”. </p>
+                         Since this epoch was the peak of the reptile-like animals, it was also known as the “Age of Reptiles”. </p>
                     <p class="text-danger mb-0"><i class="fa fa-paw text-success" aria-hidden="true"></i> &nbsp; <b>Triassic (252 to 201 million years ago)</b></p>
                     <p class="text-info mb-0"><i class="fa fa-paw text-success" aria-hidden="true"></i> &nbsp; <b>Jurassic (201 to 145 million years ago)</b></p>
                     <p class="text-warning mb-0"><i class="fa fa-paw text-success" aria-hidden="true"></i> &nbsp;<b>Cretaceous (145 to 66 million years ago)</b></p>
@@ -539,7 +539,9 @@
                     <div class="p-lg-5 ps-lg-0">
                         <p class="d-inline-block border rounded-pill text-dark py-1 px-4">Amber</p>
                         <h1 class="text-success mb-4">The Most Beautiful Fossil</h1>
-                        <p class="text-warning mb-4 pb-2">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
+                        <p id="textBackground" style="color:rgb(63, 48, 6);">Amber is a kind of hard fossilized tree resin that was formed millions of years ago. 
+                            Sometimes small insects like ants or mosquitoes were found trapped inside a resin. This type of natural stone comes in different colors, 
+                            ranging from orange yellow to reddish brown. Today, amber is made into different forms of luxury jewelry products, from earrings to necklaces. </p>
                         <div class="row g-4">
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
